# yyx_common

./: README.md
armor_check/: CMakeLists.txt  package.xml
armor_check/launch/: launch_nodes.launch.py
armor_check/src/display/: display.cpp
armor_check/src/traditional/: traditional.cpp
armor_check/src/yolo/: yolo.cpp
armor_ws/: subscriber_member_function.cpp
armor_ws/src/armor_detector/: CMakeLists.txt  package.xml
armor_ws/src/armor_detector/msg/: ArmorDetection.msg
armor_ws/src/armor_detector/src/: .video_publisher.cpp.swp  display_node.cpp  traditional_detector.cpp  video_publisher.cpp  yolo_detector.cpp
armor_ws/yolov5/models/: common.py
