<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_detector</name>
  <version>0.0.0</version>
  <description>装甲板识别功能包</description>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>message_filters</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rosidl_typesupport_cpp</exec_depend>  
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
